<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item android:id="@+id/add"
	android:icon="@android:R/drawable/ic_menu_add"
	android:title="@string/menu_add" />
  <item android:id="@+id/options"
        android:icon="@android:R/drawable/ic_menu_preferences"
        android:title="@string/menu_options" />
  <item android:id="@+id/track"
        android:icon="@android:R/drawable/ic_menu_recent_history"
        android:title="@string/menu_track" />
  <item android:id="@+id/pause"
        android:icon="@android:R/drawable/ic_menu_close_clear_cancel"
        android:title="@string/menu_pause" />
  <item android:id="@+id/reset"
        android:icon="@android:R/drawable/ic_menu_revert"
        android:title="@string/menu_reset" />
  <item android:id="@+id/export"
        android:icon="@android:R/drawable/ic_menu_share"
	android:title="@string/menu_export" />
</menu>
